bug fixing.